force-app/main/default/objects/SAI_Party__c/SAI_Party__c.object-meta.xml
<CustomObject>

    <label>SAI Party</label>
    <nameField>
        <displayFormat>PA-{00000000}</displayFormat>
        <label>SAI Party Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>SAI Parties</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>