force-app/main/default/objects/SAI_Party__c/fields/Natural_Person_Indicator__c.field-meta.xml
<CustomField>
    <fullName>Natural_Person_Indicator__c</fullName>
    <label>Natural Person Indicator</label>
    <length>1</length>
    <type>Text</type>
</CustomField>