force-app/main/default/objects/SAI_Party__c/fields/Party_Name__c.field-meta.xml
<CustomField>
    <fullName>Party_Name__c</fullName>
    <label>Party Name</label>
    <type>TextArea</type>
</CustomField>