force-app/main/default/objects/SAI_Party__c/fields/Party_Source_System__c.field-meta.xml
<CustomField>
    <fullName>Party_Source_System__c</fullName>
    <label>Party Source System</label>
    <length>10</length>
    <type>Text</type>
</CustomField>