force-app/main/default/objects/SAI_Party__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Individual_Indicator__c</columns>
    <columns>Party_Number__c</columns>
    <columns>Party_Source_System__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>